# st

./: CMakeLists.txt
DPLL/: DPLL.sln  DPLL.vcxproj  DPLL.vcxproj.filters  DPLL_TemporaryKey.pfx  dpll.cpp  dpll.h  eg.cnf  file_operator.cpp  main.cpp  readme.txt  resource.h
test/: check.cpp  check.h  dpll.cpp  dpll.h  initSolve.cpp  initSolve.h  jsonHelper.cpp  jsonHelper.h  main.cpp  walksat.cpp  walksat.h
